SERVER-51287 check socket() call for failure